added channel owners

--- a/app/views/layouts/navs/_admin_sidebar.html.haml
+++ b/app/views/layouts/navs/_admin_sidebar.html.haml
@@ -15,5 +15,8 @@
 		= link_to admin_bylaws_path, class: "nav-link bg-dark text-light" do
 			%i.bi.bi-list{aria:{hidden: true}}
 			Bylaws
+		= link_to admin_channel_owners_path, class: "nav-link bg-dark text-light" do
+			%i.bi.bi-list{aria:{hidden: true}}
+			Channel Owners
 
 	
