--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -11,5 +11,6 @@
 			%turbo-frame{id: "rightSide", data: {turbo: {action: "advance"}}}
 				= render partial: "surveys/basic_info/title", locals: {survey: @survey}
 				= render partial: "surveys/basic_info/slug", locals: {survey: @survey}
+				= render partial: "surveys/basic_info/survey_type", locals: {survey: @survey}	
 				= render partial: "surveys/basic_info/short_description", locals: {survey: @survey}	
 				= render partial: "surveys/basic_info/long_description", locals: {survey: @survey}	
