--- a/app/views/surveys/_sidebar.html.haml
+++ b/app/views/surveys/_sidebar.html.haml
@@ -4,4 +4,11 @@
 		- survey.sections.order(section_number: :asc).each do |s|
 			= link_to "#{s.section_number}. #{s.title}", edit_survey_section_path(survey_slug: @survey.slug, sec_num: s.section_number), class: "d-block p-2 text-light nav-link border border-light m-2 w-100"
 	= button_to "Add Section", survey_sections_path(survey_slug: survey.slug), class: "d-block p-2 text-light nav-link border border-light m-2 w-100 bg-dark text-light text-start"
+
+	%hr.border.border-light.mb-4.mt-4
+
+	= link_to "Interviews", survey_responses_path(survey_slug: @survey.slug, list_filter: "all"), class: "d-block p-2 text-light nav-link border border-light m-2 w-100"
+	= link_to "Interviewers", survey_interviewers_path(survey_slug: @survey.slug), class: "d-block p-2 text-light nav-link border border-light m-2 w-100"
+
+
 			
