--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -7,5 +7,6 @@
 
 			- unless  @survey.survey_type.titleize == "Open Interview"
 				= button_to "Take Survey", survey_responses_path(survey_slug: @survey.slug), method: :post, class: "btn btn-dark btn-lg"
-			- if @survey.interviewers.map { |i| i.user_id == current_user&.id }
+
+			- if current_user&.id.in?(@interviewers)
 				= button_to "Start an Interview", survey_responses_path(survey_slug: @survey.slug, include_interviewer: true), method: :post, class: "btn btn-dark btn-lg"
