added a view of the response

--- a/app/views/surveys/responses/index.html.haml
+++ b/app/views/surveys/responses/index.html.haml
@@ -41,5 +41,7 @@
 									- r.interviewees.each do |i|
 										#{i.first_name} #{i.last_name},
 
+							%a.btn.btn-dark.btn-lg{href: survey_response_path(survey_slug: @survey.slug, id: r.id), data: {turbo_frame: "_top"}} View
+
 							%a.btn.btn-dark.btn-lg{href: edit_survey_response_path(survey_slug: @survey.slug, id: r.id), data: {turbo_frame: "_top"}} Continue
 						
