--- a/app/views/videos/controls/settings_menu/ad_menu.html.haml
+++ b/app/views/videos/controls/settings_menu/ad_menu.html.haml
@@ -7,7 +7,7 @@
 		.model-body.text-dark.p-4
 			%p Audio Descriptions on this platform are synthesized speech derived from the Visual Descriptions available in the transcripts below the videos.
 
-			%p Enabling Audio Descriptions gives you control over the device voice you prefer, as well as the speaking rate, pitch and volume of the voice.
+			%p Enabling Audio Descriptions allows you to choose between a recording of the visual descriptions in the transcript using speech-to-text technology, or allowing your device's built in voices to read that information to you at the correct timestamp during playback of the video.
 
 			.list-group
 				%button.list-group-item.list-group-item-action.btn.btn-outline-dark.btn-lg.border.border-dark.d-flex.mb-2{type: "button"}
@@ -22,4 +22,35 @@
 					%button.list-group-item.list-group-item-action.btn.btn-outline-dark.btn-lg.border.border-dark.d-flex.mb-2{type: "button"}
 						%span.p-2.flex-grow-1 Voice	
 						%i.bi.bi-caret-right-fill.align-self-center{aria: {hidden: "true"}}
+
+			.border.border-dark.p-4
+				%label.form-label.mb-4{for: "speakingRate"} Speaking Rate
+				.d-flex.p-2.align-items-center{data: {controller: "slider", slider: {text_value: "Percent"}}}
+					.flex-grow-1
+						.ticks
+							- 21.times do
+								%span.tick 
+						%input.slider{id: "speakingRate", type: "range", min: "0", max: "2", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}	
+					%output.p-2.ms-4.bg-dark.text-light.align-self-center.text-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}, style: "width: 4rem"}
+			.border.border-dark.p-4
+				%label.form-label.mb-4{for: "pitch"} Pitch
+				.d-flex.p-2.align-items-center{data: {controller: "slider", slider: {text_value: "Percent"}}}
+					.flex-grow-1
+						.ticks
+							- 11.times do
+								%span.tick 
+						%input.slider{id: "pitch", type: "range", min: "0", max: "1", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}
+					%output.p-2.ms-4.bg-dark.text-light.align-self-center.text-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}, style: "width: 4rem"}
+			.border.border-dark.p-4
+				%label.form-label.mb-4{for: "volume"} Volume
+				.d-flex.p-2.align-items-center{data: {controller: "slider", slider: {text_value: "Percent"}}}
+					.flex-grow-1
+						.ticks
+							- 11.times do
+							%span.tick 
+						%input.slider{id: "volume", type: "range", min: "0", max: "1", step: "0.1", data: {action: "mouseup->slider#maintainFocus change->slider#updateValueText", slider: {target: "slider"}}}
+					%output.p-2.ms-4.bg-dark.text-light.align-self-center.text-center{aria: {hidden: "true"}, data: {slider: {target: "output"}}, style: "width: 4rem"}
+				
+			
+		
 				
