--- a/app/views/videos/controls/_control_bar.html.haml
+++ b/app/views/videos/controls/_control_bar.html.haml
@@ -1,6 +1,7 @@
 .bg-dark.text-light.p-2.d-flex
 	= render partial: "videos/controls/buttons/play_pause"
 	= render partial: "videos/controls/time_range"
+	= render partial: "videos/controls/playback_rate"
 	= render partial: "videos/controls/buttons/cc"
 	= render partial: "videos/controls/buttons/ad"
 	= render partial: "videos/controls/buttons/settings", locals: {video: video}
