corrected some layout issues

--- a/app/views/videos/controls/_playback_rate.html.haml
+++ b/app/views/videos/controls/_playback_rate.html.haml
@@ -1,4 +1,4 @@
-.p-2.d-none.d-sm-inline-flex
+.p-2.d-flex
 	%button#decreasePlaybackButton.btn.btn-dark.btn-lg.border.border-light{type: "button", aria: {label: "Decrease Playback Rate (shift + down)"}, data: {action: "click->video-container#setSpeed keydown.shift+down@document->video-container#setSpeed", bs: {title: "Decrease Playback Rate (shift + down)", toggle: "tooltip", placement: "top"}, video: {container: {target: "decreasePlaybackButton"}}}}
 		%i.bi.bi-chevron-down{aria: {hidden: "true"}}
 	.p-2.border.border-light
