--- a/app/views/videos/controls/_time_range.html.haml
+++ b/app/views/videos/controls/_time_range.html.haml
@@ -1,4 +1,4 @@
-.p-2.flex-grow-1.align-self-center
+.p-2.flex-grow-1.align-self-center{role: "text"}
 	%time{datetime: "PT0M0S", data: {video: {container: {target: "currentTime"}}}} 0:00
 	%span /
 	%time{data: {video: {container: {target: "duration"}}}}
