--- a/app/views/videos/controls/buttons/_ad.html.haml
+++ b/app/views/videos/controls/buttons/_ad.html.haml
@@ -1,2 +1,2 @@
-.p-2.d-none.d-md-inline-flex
+.p-2.d-none.d-lg-flex
 	%button#adButton.btn.btn-lg.btn-dark.border.border-light{type: "button", aria: {label: "Audio Descriptions (a)", pressed: "false"}, data: {action: "click->video-container#toggleAD keydown.a@document->video-container#toggleAD", bs:{toggle: "tooltip", title: "Audio Descriptions (a)", placement: "top"}, video: {container: {target: "adButton"}}}} AD
