--- a/app/views/videos/text_tracks/vtt/captions.vtt.haml
+++ b/app/views/videos/text_tracks/vtt/captions.vtt.haml
@@ -1,6 +1,6 @@
 - @blocks.each_with_index do |b, i|
 	= i + 1
-	= raw("#{b.start.strftime('%H:%M:%S.%L')} --> #{b.end.strftime('%H:%M:%S.%L')} align:start")
+	= raw("#{b.start.strftime('%H:%M:%S.%L')} --> #{b.end.strftime('%H:%M:%S.%L')}")
 	- unless b.payload.nil?
 		- b.payload.each do |p|
 			= raw(p)
