--- a/app/views/camps/edit.html.haml
+++ b/app/views/camps/edit.html.haml
@@ -35,6 +35,10 @@
 						.text-end.text-muted
 							= Time.zone
 
+			.form-floating
+				= f.text_field :app_url, class: "form-control border border-dark"
+				= f.label :app_url, "Link to Application"
+
 			.form-floating.mb-4
 				= f.text_area :description, placeholder: "Description", class: "form-control border border-dark", data:{controller: "textarea-autogrow"}, style: "height: 100px"
 				= f.label :description, "Description"
