updated ILY by Tricio landing page

--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -2,96 +2,9 @@
 	.container
 		%a.navbar-brand{href: "#"} 
 			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
-			ILY by Tricio
+			%span.brand-ily{style: "font-family: cursive"} ILY by Tricio
 .container-xl.pt-4
-	%h1 Welcome!
-	%p New Homepage is coming soon.  However, you can checkout products for our upcoming special event on april 22nd, 2023.
+	%h1 Welcome to ILY by Tricio
+	%p With the new year of 2024, exciting changes are coming.  Stay tuned.
 
-	%a.btn.btn-dark.btn-lg{href: special_event_path} See Products
-
-.d-none.container.pt-4
-	%h1.text-center Products
-	.row.mb-4
-		.col-6.col-lg-4.mt-4
-			.card
-				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
-					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
-				.card-body
-					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
-						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Dark Chocolate Chip Cookie
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/RMWWJ4XPMCHB5YC7E2UHXBRB", role: "button"} 5 for $10
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/3EVRK5OV7SF3THS3ELQPI37F", role: "button"} 12 for $20
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/PQJWIM2ILIF7KICXXKT3F6WK", role: "button"} Batch Pricing
-		.col-6.col-lg-4.mt-4
-			.card
-				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
-					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/pumpkin-dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
-				.card-body
-					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
-						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Pumpkin Dark Chocolate Chip Cookie
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/DHGTB6IMLNZVELZOWH3HRNG5", role: "button"} 5 for $10
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/OTPOD4OQITHMDVGQ3P7EYKRK", role: "button"} 12 for $20
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/TSZZ2DRVUOOYWMVA4C7MZQ3G", role: "button"} Batch Pricing
-		.col-6.col-lg-4.mt-4
-			.card
-				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
-					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/oatmeal-pumpkin-pie-spiced-dark-chocolate-chip-cookie.png", width: "100%", alt: ""}
-				.card-body
-					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
-						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Oatmeal Pumpkin Pie Spiced Dark Chocolate Chip Cookie
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/DCHOD44N6U4U6GSLNWSKK2C5", role: "button"} 5 for $10
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/HQN6YZXKXKXLLARMS3RTN7WK", role: "button"} 12 for $20
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/BSC7TRK2TEVSSJRGT3E3Z2OP", role: "button"} Batch Pricing
-		.col-6.col-lg-4.mt-4
-			.card
-				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
-					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/oatmeal-pumpkin-pie-spiced-raisin-cookie.png", width: "100%", alt: ""}
-				.card-body
-					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
-						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Oatmeal Pumpkin Pie Spiced Raisin Cookie
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/3I3V7UADGUFKAHKBH4AEITWC", role: "button"} 5 for $10
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/CQIXKHUYHAZXAB5URSCAANBD", role: "button"} 12 for $20
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/7OBIVIATXQETB3JE75ZBWXWI", role: "button"} Batch Pricing
-		.col-6.col-lg-4.mt-4
-			.card
-				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
-					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/peanut-butter-cookie.png", width: "100%", alt: ""}
-				.card-body
-					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
-						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Peanut Butter Cookie
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/QOTX2DIDDW3XEQSDLZIKBFGD", role: "button"} 5 for $10
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/KDRBVDEQJLFKEAEXGYE4AEUT", role: "button"} 12 for $20
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/V4SPRWRDYUMQFPOJS5UWKDIL", role: "button"} Batch Pricing
-		.col-6.col-lg-4.mt-4
-			.card
-				.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
-					%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/pumpkin-pie-spiced-sugar-cookie.png", width: "100%", alt: ""}
-				.card-body
-					.card-title.text-center.position-relative.w-100{style: "padding-top: 10rem"}
-						%h2.position-absolute.top-0.bottom-0.end-0.start-0 Pumpkin Pie Spiced Sugar Cookie
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/EWO4ADOM3Q5IJV3K2ZCDF4RN", role: "button"} 5 for $10
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/ITSS5GUOSE5OULAMSPRMXG5Q", role: "button"} 12 for $20
-					.row.mb-3
-						%a.btn.btn-lg.btn-dark{href: "https://checkout.square.site/merchant/ML1YRQRFSHJBS/checkout/4VSA4ON54TN767247QGDWCFA", role: "button"} Batch Pricing
-			
-
-	.col-md-8.mb-4.mt-4.mx-auto
-		%h2.text-center Disclaimer
-		%p.text-center Any food products produced by ILY by Tricio are homemade and not subject to state inspection.
+	
