--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -123,7 +123,7 @@ margin-left: 20px;
 }
 
 .bg-ily {
-	background: #404040	
+	background: #3c443c
 }
 .brand-ily {
 	color: #FFD700
@@ -131,7 +131,7 @@ margin-left: 20px;
 
 @media (inverted-colors: inverted) {
 	.bg-ily {
-		background: #BFBFBF	
+		background: #c3bbc3	
 	}
 	.brand-ily {
 		color: #0028FF
