updated the background for ily

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -131,7 +131,7 @@ margin-left: 20px;
 
 @media (inverted-colors: inverted) {
 	.bg-ily {
-		background: #c3bbc3	
+		background: #c4bcc4	
 	}
 	.brand-ily {
 		color: #0028FF
