hid sponsors from camp page

--- a/app/views/camps/show.html.haml
+++ b/app/views/camps/show.html.haml
@@ -43,8 +43,8 @@
 
 			%p #{type.description}
 			
-		%h2.text-center Thank You to our Sponsors
-		.row.mb-4
+		%h2.d-none.text-center Thank You to our Sponsors
+		.d-none.row.mb-4
 			.col-6.col-md-3.mx-auto
 				%img.w-100{src: "https://storage.googleapis.com/dbsan-public/sponsors/Spectrum_Logo_RGB%20(1).png", alt: "Spectrum"}
 			.col-6.col-md-3.mx-auto
