updated ILY page

--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -5,6 +5,10 @@
 			%span.brand-ily{style: "font-family: cursive"} ILY by Tricio
 .container-xl.pt-4
 	%h1 Welcome to ILY by Tricio
-	%p With the new year of 2024, exciting changes are coming.  Stay tuned.
+	%p 
+		This part of the website is under construction; however, you can visit the
+		%a{href: "https://ilybytricio.square.site"} Online Store
+		or follow us on
+		%a{href: "https://www.facebook.com/ilybytricio"} Facebook.
 
 	
