--- a/app/views/camps/index.html.haml
+++ b/app/views/camps/index.html.haml
@@ -9,3 +9,11 @@
 			%h2 #{link_to camp.title, camp_path(camp)}
 			%p.text-muted From #{camp.start.in_time_zone.strftime("%A, %B %d, %Y %l:%M %p")} to #{camp.end.strftime("%A, %B %d, %Y %l:%M %p (EST)")}
 		
+	%h2 Our CEU Sponsors
+	.row
+		.col
+			%img{src: "https://storage.googleapis.com/dbsan-public/4-MassRIDlogo.jpg", alt: "MassRid", width: 100%""}
+		.col
+			%img{src: "https://storage.googleapis.com/dbsan-public/ACET%20Logo%20-%20JPEG.jpg", alt: "ACET Logo", width: "100%"}
+		.col
+			%img{src: "https://storage.googleapis.com/dbsan-public/CMP%20Logo%20-%20JPEG.jpg", alt: "RID", width: "100%"}
