--- a/app/views/camps/index.html.haml
+++ b/app/views/camps/index.html.haml
@@ -12,7 +12,7 @@
 	%h2 Our CEU Sponsors
 	.row
 		.col
-			%img{src: "https://storage.googleapis.com/dbsan-public/4-MassRIDlogo.jpg", alt: "MassRid", width: 100%""}
+			%img{src: "https://storage.googleapis.com/dbsan-public/4-MassRIDlogo.jpg", alt: "MassRid", width: "100%"}
 		.col
 			%img{src: "https://storage.googleapis.com/dbsan-public/ACET%20Logo%20-%20JPEG.jpg", alt: "ACET Logo", width: "100%"}
 		.col
