--- a/app/views/pages/contenteditable.html.haml
+++ b/app/views/pages/contenteditable.html.haml
@@ -1,6 +1,6 @@
 .container
-	.form-check
-		%input#switch.form-check-input{type: "checkbox", style: "width: 6rem; height: 3rem"}
+	.form-check.form-switch
+		%input#switch.form-check-input{type: "checkbox", style: "width: 6rem; height: 3rem", role:"switch"}
 		%label.form-check-label{for: "switch"} Testing Switch
 		
 
