testing the visual layout of switch

--- a/app/views/pages/contenteditable.html.haml
+++ b/app/views/pages/contenteditable.html.haml
@@ -1,6 +1,6 @@
 .container
-	.form-check.form-switch
-		%input#switch.form-check-input{type: "checkbox", style: "width: 6rem; height: 3rem", role:"switch"}
+	.form-check.form-switch.d-flex.align-items-center.w-25.ps-0
+		%input#switch.form-check-input.order-1{type: "checkbox", style: "width: 6rem; height: 3rem", role:"switch"}
 		%label.form-check-label{for: "switch"} Testing Switch
 		
 
