--- a/app/views/pages/contenteditable.html.haml
+++ b/app/views/pages/contenteditable.html.haml
@@ -1,7 +1,7 @@
 .container
-	.form-check.form-switch.d-flex.align-items-center.w-50.ps-0
+	.form-check.form-switch.d-flex.align-items-center.w-25.ps-0
 		%input#switch.form-check-input.order-1{type: "checkbox", style: "width: 6rem; height: 3rem", role:"switch"}
-		%label.form-check-label{for: "switch"} Testing Switch
+		%label.form-check-label.flex-grow-1{for: "switch"} Testing Switch
 		
 
 	-#%h1 This page demonstrates the use of a contenteditable
