--- a/app/views/pages/contenteditable.html.haml
+++ b/app/views/pages/contenteditable.html.haml
@@ -1,8 +1,9 @@
 .container
 	.form-check.form-switch.d-flex.align-items-center.w-25.ps-0
-		%input#switch.form-check-input.order-1{type: "checkbox", style: "width: 6rem; height: 3rem", role:"switch"}
-		%label.form-check-label.flex-grow-1{for: "switch"} Testing Switch
-		
+		%input#switch.form-check-input.order-1{type: "checkbox", role:"switch", style: "width: 6rem; height: 3rem"}
+		%label#switch-label.form-check-label.flex-grow-1{for: "switch"} Testing Switch
+	
+	
 
 	-#%h1 This page demonstrates the use of a contenteditable
 
