switched width to column

--- a/app/views/pages/contenteditable.html.haml
+++ b/app/views/pages/contenteditable.html.haml
@@ -1,5 +1,5 @@
 .container
-	.form-check.form-switch.d-flex.align-items-center.w-100.w-lg-25.ps-0
+	.form-check.form-switch.d-flex.align-items-center.col-12.col-lg-3.ps-0
 		%input#switch.form-check-input.order-1{type: "checkbox", role:"switch", style: "width: 6rem; height: 3rem"}
 		%label#switch-label.form-check-label.flex-grow-1{for: "switch"} Testing Switch
 	
