--- a/app/views/pages/contenteditable.html.haml
+++ b/app/views/pages/contenteditable.html.haml
@@ -1,8 +1,4 @@
-.container
-	.form-check.form-switch.d-flex.align-items-center.col-12.col-lg-3.ps-0
-		%input#switch.form-check-input.order-1{type: "checkbox", role:"switch", style: "width: 6rem; height: 3rem"}
-		%label#switch-label.form-check-label.flex-grow-1{for: "switch"} Testing Switch
-	
+= render partial: "shifting_colors"
 	
 
 	-#%h1 This page demonstrates the use of a contenteditable
