--- a/app/views/layouts/plain.html.haml
+++ b/app/views/layouts/plain.html.haml
@@ -2,7 +2,7 @@
 %html{lang: "en"}
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
-    %title "Shifting the Bootstrap Colors"
+    %title Shifting the Bootstrap Colors
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}
     %meta{property: "og:title", content: @meta_title}
     - unless @meta_og_type.nil?
